<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyAppShop</string>
    <string name="login">LOGIN</string>
    <string name="et_hint_user_account">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="forgotPassword"><u>Forgot password?</u></string>
    <string name="text_confirm">I Agree To The <b><u>Terms &amp; Condition</u></b> </string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_user_account">Please enter user account</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="text_register_successful">Thanks for registering!</string>
    <string name="text_status_successful_register">You are registered successfully</string>

    <string name="please_wait">Please waiting for seconds&#8230;</string>
    <string name="forgot_password_screen">FORGOT PASSWORD SCREEN</string>
    <string name="forgotPassword_enter_emailAddress">Nhập địa chỉ email</string>
    <string name="forgotPassWord_text_Message">Vui lòng nhập email. Sau đó nhấn nút gửi email rồi trở về màn hình đăng nhập và nhập mật khẩu chúng tôi gửi cho bạn.</string>
    <string name="forgotPassWord_btn_Forgot">Gửi Email</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>

    <string name="text_send_mail_successful">Email sent successfully to rest your password.</string>

    <string name="image_selection_failed">Image selection failed!</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="content_description">user avartar</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_mobile_number">Phone number</string>
    <string name="btn_male">MALE</string>
    <string name="btn_female">FEMALE</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_address">Address</string>
    <string name="err_msg_enter_phone_number">Please enter a phone number\n</string>
    <string name="err_msg_enter_birthday">Please enter a birthday</string>
    <string name="err_msg_enter_address">Please enter a address</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">NOTIFICATION</string>
    <string name="title_message_no_avalable">There are currently no messages available!</string>


    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_product">Products</string>
    <string name="title_order">Orders</string>
    <string name="title_message">Message</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="action_new_message">New Message</string>
    <string name="title_new_message">Select User</string>
    <string name="title_chat_log">Chat Log</string>
    <string name="send_message">Enter Message</string>
    <string name="btn_send">Send</string>

    <string name="action_add_product">Add Product</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price (VND)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="btn_lbl_submit">SUBMIT</string>


    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="product_uploaded_success_message">The product is uploaded successfully.</string>


    <string name="no_products_added_yet">No products added yet.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_dashboard_item_found">No items found!</string>


    <string name="product_delete_success_message">The product was deleted successfully!!</string>
    <string name="delete_dialog_title">DELETE PRODUCT</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>


    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Product is added to your cart.</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>


    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>


    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>


    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>


    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>

    <string name="err_your_address_added_successfully">Your address is added successfully.</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>

    <string name="title_select_address">SELECT ADDRESS</string>


    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>


    <string name="no_orders_placed_yet">No orders placed yet!</string>

    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>

    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
    <string name="first_slide">Choose Your Products</string>
    <string name="description_first_slide">There are a variety of quality products from famous brands to choose from.</string>
    <string name="second_slide">Easy payment, just one touch.</string>
    <string name="third_slide">Account Security.</string>
    <string name="description_second_slide" />
    <string name="description_third_slide" />
    <string name="lbl_product_details_comment">Comment:</string>
    <string name="more">More</string>
    <string name="title_comment_log">COMMENT</string>
    <string name="send_comment_statement">Enter a comment statement.</string>
    <string name="rating_product">Rating Product:</string>
    <string name="lbl_product_details_rating">Rating Star:</string>
    <string name="action_search">Search</string>
    <string name="btn_lbl_change_password">CHANGE PASSWORD</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="enter_the_old_password">Enter the old password.</string>
    <string name="password">Password</string>
    <string name="new_password">Enter the new password.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="err_msg_enter_old_password">Please enter a old password.</string>
    <string name="err_msg_enter_a_new_password">Please enter a new password.</string>
    <string name="first_name">First Name</string>
    <string name="lbl_chat_with_shop">Chat with shop.</string>
    <string name="category">Category</string>
    <string name="all_product">All The Product</string>
    <string name="action_notification">Notification</string>
    <string name="no_notification_added_yet">No notification available yet.</string>
</resources>
