<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.activities.users.DangNhap">

    <com.example.myappshop.utils.MSPTextViewBold
        android:id="@+id/tvDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:textColor="@color/colorPrimaryText"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="4dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:id="@+id/Email">

        <com.example.myappshop.utils.MSPEditText
            android:id="@+id/et_user_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:hint="@string/et_hint_user_account"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        app:boxStrokeWidth="4dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/getPass"
        tools:layout_editor_absoluteX="130dp">

        <com.example.myappshop.utils.MSPEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:hint="@string/et_hint_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:scaleType="fitCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvDangNhap"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/home"
        tools:layout_editor_absoluteX="150dp"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/app_name"/>

    <com.example.myappshop.utils.MSPButton
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/btn_signup"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        tools:ignore="MissingConstraints" />

    <com.example.myappshop.utils.MSPTextView
        android:id="@+id/getPass"
        android:autoLink="all"
        android:textColorLink="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:textSize="18dp"
        android:linksClickable="true"
        android:textStyle="bold"
        android:hint="@string/forgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="42dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="482dp"
        tools:ignore="MissingConstraints"
        />

    <com.example.myappshop.utils.MSPButton
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/btn_signin"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/getPass"
        android:layout_marginTop="24dp"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="354dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>