<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.example.myappshop.utils.MSPTextViewBold
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="-48dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.appcompat.widget.Toolbar>
    <!-- Khung nhập email -->

    <com.example.myappshop.utils.MSPTextViewBold
        android:id="@+id/tvTitleForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_screen"
        android:textSize="18sp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.example.myappshop.utils.MSPEditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/forgotPassword_enter_emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMessage"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <!-- Nút gửi email -->
    <com.example.myappshop.utils.MSPButton
        android:id="@+id/buttonSendEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/forgotPassWord_btn_Forgot"
        android:layout_marginStart="80dp"
        android:textSize="@dimen/btn_text_size"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <!-- Dòng thông báo -->
    <com.example.myappshop.utils.MSPTextView
        android:id="@+id/textViewMessage"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/forgotPassWord_text_Message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleForgot" />

</androidx.constraintlayout.widget.ConstraintLayout>
